[package]
name = "stoicn"
version = "1.0.4"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1.12.0"
rustc-hash = "2.1.2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
overflow-checks = false
debug-assertions = false
